<?xml version="1.0"?>
<package format="3">
  <name>actuator_state_broadcaster</name>
  <version>2.17.3</version>
  <description>Controller to publish actuator state</description>
  <maintainer email="alexis.hou@cea.fr">Alexis Hou</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>rcutils</build_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rcutils</exec_depend>

  <depend>backward_ros</depend>
  <depend>control_msgs</depend>
  <depend>controller_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
